Include Google Analytics snippet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
   <main></main>
   <script src="./index.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144210509-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-144210509-1');
+  </script>
 </body>
 
 </html>
